# azure-iot-hub-zephyr

./: west.yml
app/: CMakeLists.txt
